add includes and layouts

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -3,11 +3,43 @@ title: About
 permalink: /about/
 ---
 
-This is the base Jekyll theme. You can find out more info about customizing your
-Jekyll theme, as well as basic Jekyll usage documentation at
-[jekyllrb.com](https://jekyllrb.com/) You can find the source code for Minima at
-GitHub: [jekyll][jekyll-organization] /
-[minima](https://github.com/jekyll/minima) You can find the source code for
-Jekyll at GitHub: [jekyll][jekyll-organization] /
-[jekyll](https://github.com/jekyll/jekyll) [jekyll-organization]:
-https://github.com/jekyll
+<div class="gallery">
+  <figure class="gallery-item">
+    <img
+      class="thumbnail-400"
+      src="/img/about/maggie-at-cake-eric-square-magenta-with-bunworld.jpg"
+      alt="Maggie Umber with hands on hips, tabling at CAKE posing with magenta line drawings of Bun, Piper and t from Bunworld "
+      title="copyright Maggie Umber and Eric Bartholomew"
+    />
+  </figure>
+</div>
+
+<h2>Maggie Umber</h2>
+<p>
+  Maggie Umber paints, prints, and programs graphic novels and zines. She's
+  published three graphic novels — Sound of Snow Falling, Time Capsule, and 270°
+  — and her work has been widely anthologized.
+</p>
+<ul>
+  <li>
+    <p>
+      &#9997;
+      <a href="mailto:paintedmags@proton.me" target="_blank">email</a>
+    </p>
+  </li>
+  <li>
+    <p>
+      &#9997;
+      <a href="https://www.patreon.com/maggieumber" target="_blank">Patreon</a>
+    </p>
+  </li>
+  <li>
+    <p>
+      &#9997;
+      <a href="https://www.instagram.com/maggieumber/" target="_blank"
+        >Instagram</a
+      >
+    </p>
+  </li>
+</ul>
+<p>🖤</p>
