comment out post true false

--- a/_posts/reviews/2024-01-26-the-academic-hour-by-keren-katz.html
+++ b/_posts/reviews/2024-01-26-the-academic-hour-by-keren-katz.html
@@ -3,6 +3,7 @@ title: The Academic Hour by Keren Katz
 categories: reviews
 ---
 
+{{ page.path }}
 <p>
   <a href="https://indiepubs.com/products/the-academic-hour" target="_blank"
     >The Academic Hour</a
