test to add site changes on gh-pages branch

--- a/_posts/2024-01-26-the-academic-hour-by-keren-katz.html
+++ b/_posts/2024-01-26-the-academic-hour-by-keren-katz.html
@@ -47,5 +47,6 @@ singles:
   is fun to try and spot the autobiographical references, no matter how
   fantastical. This illuminated treasure is to be read, and read again.
 </p>
+<p>Thank you for reading!</p>
 
 {% include blog-single.html %}
