replace proportions with portions

--- a/_posts/2024-03-08-anya-chases-down-the-end-by-jeffrey-yamaguchi.html
+++ b/_posts/2024-03-08-anya-chases-down-the-end-by-jeffrey-yamaguchi.html
@@ -38,5 +38,5 @@ doubles:
   imagine him young and hungry like Anya, poetic hopes dashed by the reality of his 
   day-to-day survival. What a taste of delicious revenge when this novella transforms working  
   for the man into a satisfying and savory snack, the grind itself a feast, no matter the 
-  proportions.
+  portions.
 </p>
