replace generic sans-serif with lato

--- a/_pages/books/bunworld-1.html
+++ b/_pages/books/bunworld-1.html
@@ -31,7 +31,7 @@ blurbs:
   - i loved this, best trip I've taken 🐰🍰 thank you so much <br /> &mdash; Hannah Larson Nall
   - Bunnworld is Fun World 🐰 🎂 <br /> &mdash; Alex Nall
 reviews:
-  - BUN IS BUN! Happy bday Bun! <br /> &mdash; MJ DUR∆ND
+  - BUN IS BUN! Happy bday Bun! <br /> &mdash; MJ Durand
   - yay for bunworld &mdash; reversal or vice versa &mdash; maybe it is a rehearsal &mdash; this life thing &mdash; a gigantic desk or a tiny maggie  &mdash; a matter of perspective <br /> &mdash; Anthony Tadlock
 events:
   - Debuted at CZF (Chicago Zine Fest), 2023
