fix cutw preorder price section

--- a/_pages/books/chrysanthemum-under-the-waves.html
+++ b/_pages/books/chrysanthemum-under-the-waves.html
@@ -7,7 +7,7 @@ redirect_from:
 cover:
   path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-cover-lrg.jpg
   alt: "a woman in profile with long hair floating up, text reads: Chrysanthemum Under the Waves"
-price: $35
+price: $35 PREORDER SHIPS 11/2024
 button_id: SB5W5DNEJC7LS
 pages: 272 pgs, 6 in x 9 in
 materials: softcover, smythsewn
@@ -36,4 +36,5 @@ events:
   - Debuts at CXC (Cartoon Crossroads Columbus), 2024
   - 10/1/16 reading/slide show presentation of The Shirley Jackson Project, Boneshaker Books, Minneapolis, MN
   - "3/12/20 Now #8 Fantagraphics reading/signing with Amy Lockeart, Quimby&#39;s, Chicago, IL"
+draft: true
 ---
