make file sizes smaller for blog imgs

--- a/_posts/2023-06-01-tour-stop-4-cake-chicago.html
+++ b/_posts/2023-06-01-tour-stop-4-cake-chicago.html
@@ -2,13 +2,13 @@
 title: "Tour Stop 4: CAKE Chicago"
 categories: tour-diary
 doubles:
-  - path: /assets/images/blog/2023-06-01-maggie-prints-cake-0001.jpg
+  - path: /assets/images/blog/2023-06-01-tour-stop-4-cake-chicago-1.jpg
     alt: various prints of wild animals and portraits of people by Maggie Umber
-  - path: /assets/images/blog/2023-06-01-maggie-prints-cake-0002.jpg
+  - path: /assets/images/blog/2023-06-01-tour-stop-4-cake-chicago-2.jpg
     alt: various prints of wild animals and portraits of people by Maggie Umber
 singles:
-  path: /assets/images/blog/2023-06-01-maggie-zines-toys-cake.webp
-  alt: "zines by Maggie Umber - Bunworld, Jonesy, Pretzel and a crocheted Bun toy"
+  - path: /assets/images/blog/2023-06-01-tour-stop-4-cake-chicago-3.jpg
+  - alt: "zines by Maggie Umber - Bunworld, Jonesy, Pretzel and a crocheted Bun toy"
 ---
 
 {% include blog-double.html %}
