--- a/_posts/2023-05-20-bunworld-1-debut-chicago-zine-fest.html
+++ b/_posts/2023-05-20-bunworld-1-debut-chicago-zine-fest.html
@@ -2,13 +2,13 @@
 title: "Bunworld 1 Debut: Chicago Zine Fest"
 categories: tour-diary
 doubles:
-  - path: /assets/images/blog/2023-05-20-maggie-umber-czf-bunworld-1-prep.jpg
+  - path: /assets/images/blog/2023-05-20-bunworld-1-debut-chicago-zine-fest-1.jpg
     alt: printed pages of Bunworld waiting to be folded with a pair of blue gloves
-  - path: /assets/images/blog/2023-05-20-maggie-umber-czf-table-setup.jpg
+  - path: /assets/images/blog/2023-05-20-bunworld-1-debut-chicago-zine-fest-2.jpg
     alt: chicago zine fest table set up with zines, prints and toys by Maggie Umber
 singles:
-  path: /assets/images/blog/2023-05-20-maggie-umber-czf-jonesy-prep.jpg
-  alt: pages from Jonesy by Maggie Umber waiting to be collated
+  - path: /assets/images/blog/2023-05-20-bunworld-1-debut-chicago-zine-fest-3.jpg
+  - alt: pages from Jonesy by Maggie Umber waiting to be collated
 ---
 
 {% include blog-double.html %}
