add show to events

--- a/_pages/events.html
+++ b/_pages/events.html
@@ -5,6 +5,7 @@ permalink: /events
 
 <h1>2024: The Less is More Zine Tour</h1>
 <ul>
+  <li>&#9997; 4/27 Print & Resist Zine Fest, Madison, WI</li>
   <li>&#9997; 8/18 INZF (Insert Name Zine Fest), Minneapolis, MN</li>
 </ul>
 
