fix CUTW post title

--- a/_posts/2024-03-13-chrysanthemum-under-the-waves-available-for-preorder.html
+++ b/_posts/2024-03-13-chrysanthemum-under-the-waves-available-for-preorder.html
@@ -1,5 +1,5 @@
 ---
-title: "Chrysanthemum Under the Wave Preorder Available"
+title: "Chrysanthemum Under the Waves Preorder Available"
 categories: tour-diary
 cover:
   path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-cover.jpg
