--- a/_pages/books/chrysanthemum-under-the-waves.html
+++ b/_pages/books/chrysanthemum-under-the-waves.html
@@ -34,7 +34,7 @@ reviews:
   - i think the style rine is in makes the elements of the house feel organic like its a shipwreck w urn corals & chandelier anemones growing & i love that <br />&mdash; lympho nodge
 events:
   - Debuts at CXC (Cartoon Crossroads Columbus), 2024
+  - 4/2/2024 artist Zoom talk for Lale Westvind's Print Class at Parsons School of Design, New York, NY
   - 10/1/16 reading/slide show presentation of The Shirley Jackson Project, Boneshaker Books, Minneapolis, MN
   - "3/12/20 Now #8 Fantagraphics reading/signing with Amy Lockeart, Quimby&#39;s, Chicago, IL"
-draft: true
 ---
