--- a/_pages/events.html
+++ b/_pages/events.html
@@ -7,6 +7,7 @@ permalink: /events
 <ul>
   <li>&#9997; 4/27 Print & Resist Zine Fest, Madison, WI</li>
   <li>&#9997; 8/18 INZF (Insert Name Zine Fest), Minneapolis, MN</li>
+  <li>&#9997; 9/26-9/29 CXC (Cartoon Crossroads Columbus), Columbus, OH</li>
 </ul>
 
 <hr />
