add new events show

--- a/_pages/events.html
+++ b/_pages/events.html
@@ -6,6 +6,7 @@ permalink: /events
 <h1>2024: The Less is More Zine Tour</h1>
 <ul>
   <li>&#9997; 4/27 Print & Resist Zine Fest, Madison, WI</li>
+  <li>&#9997; 6/15-6/16 A2CAF (Ann Arbor Comic Arts Festival), Ann Arbor, MI</li>
   <li>&#9997; 8/18 INZF (Insert Name Zine Fest), Minneapolis, MN</li>
   <li>&#9997; 9/26-9/29 CXC (Cartoon Crossroads Columbus), Columbus, OH</li>
 </ul>
