--- a/_pages/events.html
+++ b/_pages/events.html
@@ -5,47 +5,48 @@ permalink: /events
 
 <h1>2024: The Less is More Zine Tour</h1>
 <ul>
-  <li>&#9997; 4/27 Print & Resist Zine Fest, Madison, WI</li>
-  <!-- <li>&#9997; 6/15 ZND Fest (Zine Not Dead Fest: A Comics and Small Press Fair), Chicago, IL</li> -->
-  <li>&#9997; 8/18 INZF (Insert Name Zine Fest), Minneapolis, MN</li>
-  <li>&#9997; 9/26-9/29 CXC (Cartoon Crossroads Columbus), Columbus, OH</li>
+  <li>☞ 4/27 Print & Resist Zine Fest, Madison, WI</li>
+  <li>☞ 6/14-7/7 Drawing Worlds: The art of comics and beyond, A2AC (The Ann Arbor Art Center), Ann Arbor, MI</li>
+  <li>☞ 6/15 ZND Fest (Zine Not Dead Fest: A Comics and Small Press Fair), Chicago, IL</li>
+  <li>☞ 8/18 INZF (Insert Name Zine Fest), Minneapolis, MN</li>
+  <li>☞ 9/26-9/29 CXC (Cartoon Crossroads Columbus), Columbus, OH</li>
 </ul>
 
 <hr />
 <h1>2023: My Mostly Midwest Zine Tour</h1>
 <ul>
   <li>
-    &#9997; 4/8 ICE CREAM (Iowa City Expo for Comics and Real Eclectic
+    ☞ 4/8 ICE CREAM (Iowa City Expo for Comics and Real Eclectic
     Alternative Media), Iowa City, IA
   </li>
-  <li>&#9997; 4/22 Print & Resist Zine Fest, Madison, WI</li>
-  <li>&#9997; 5/20 CZF (Chicago Zine Fest), Chicago, IL</li>
-  <li>&#9997; 6/3-6/4 CAKE (Chicago Alternative Comics Expo), Chicago, IL</li>
+  <li>☞ 4/22 Print & Resist Zine Fest, Madison, WI</li>
+  <li>☞ 5/20 CZF (Chicago Zine Fest), Chicago, IL</li>
+  <li>☞ 6/3-6/4 CAKE (Chicago Alternative Comics Expo), Chicago, IL</li>
   <li>
-    &#9997; 6/23-6/26 The Zine Pavilion at ALA (American Library Association),
+    ☞ 6/23-6/26 The Zine Pavilion at ALA (American Library Association),
     Chicago, IL
   </li>
-  <li>&#9997; 8/12 INZF (Insert Name Zine Fest), Minneapolis, MN</li>
-  <li>&#9997; 8/27 ZINEmercado, Chicago, IL</li>
-  <li>&#9997; 9/9 Zinecinnati, Cincinnati, OH</li>
+  <li>☞ 8/12 INZF (Insert Name Zine Fest), Minneapolis, MN</li>
+  <li>☞ 8/27 ZINEmercado, Chicago, IL</li>
+  <li>☞ 9/9 Zinecinnati, Cincinnati, OH</li>
   <li>
-    &#9997; 9/10 MILK Comic Fest (Milwaukee Indie Local Comic Fest), Milwaukee,
+    ☞ 9/10 MILK Comic Fest (Milwaukee Indie Local Comic Fest), Milwaukee,
     WI
   </li>
-  <li>&#9997; 9/16-9/17 CABF (Cincinnati Art Book Fair), Covington, KY</li>
+  <li>☞ 9/16-9/17 CABF (Cincinnati Art Book Fair), Covington, KY</li>
   <li>
-    &#9997; 10/6 ZINE NOT DEAD #21, hosted by Chicago Printers Guild,
+    ☞ 10/6 ZINE NOT DEAD #21, hosted by Chicago Printers Guild,
     Co-prosperity, Chicago, IL
   </li>
   <li>
-    &#9997; 10/7 Chicago Printer Guild PAPER JAM Co-prosperity, Chicago, IL
+    ☞ 10/7 Chicago Printer Guild PAPER JAM Co-prosperity, Chicago, IL
     (screening The Schizophrenic Dialogues Short Film with Corrupted Frames: A
     Digital Gallery)
   </li>
-  <li>&#9997; 10/7 Lafayette Comic-Con, Lafayette, IN</li>
-  <li>&#9997; 10/14 Rain Taxi's Twin Cities Book Festival, St. Paul, MN</li>
+  <li>☞ 10/7 Lafayette Comic-Con, Lafayette, IN</li>
+  <li>☞ 10/14 Rain Taxi's Twin Cities Book Festival, St. Paul, MN</li>
   <li>
-    &#9997; 10/21 Chicago Printer Guilds PAPER JAM Publishers Fair,
+    ☞ 10/21 Chicago Printer Guilds PAPER JAM Publishers Fair,
     Co-prosperity, Chicago, IL
   </li>
   <l>🖤</l>
