update Madison P&R name

--- a/_pages/events.html
+++ b/_pages/events.html
@@ -5,7 +5,7 @@ permalink: /events
 
 <h1>2024: The Less is More Zine Tour</h1>
 <ul>
-  <li>☞ 4/27 Print & Resist Zine Fest, Madison, WI</li>
+  <li>☞ 4/27 Madison Print & Resist Zine Fest, Madison, WI</li>
   <li>☞ 6/14-7/7 Drawing Worlds: The art of comics and beyond, A2AC (The Ann Arbor Art Center), Ann Arbor, MI</li>
   <li>☞ 6/15 ZND Fest (Zine Not Dead Fest: A Comics and Small Press Fair), Chicago, IL</li>
   <li>☞ 8/18 INZF (Insert Name Zine Fest), Minneapolis, MN</li>
