--- a/_posts/2024-04-22-less-is-more-zine-tour-launch.html
+++ b/_posts/2024-04-22-less-is-more-zine-tour-launch.html
@@ -6,7 +6,7 @@ cover:
   alt: 7 prints from Sound of Snow Falling and Time Capsule featuring animals and plants
 singles:
   - path: /assets/images/blog/2024-04-22-less-is-more-zine-tour-launch-2.jpg
-    alt: poster for Print & Resist Zinefest at Madison Public Library
+    alt: poster for Madison Print & Resist Zinefest at Madison Public Library
 ---
 <p> ☞ <br />
   Saturday kicks off my 2024 Less is More Zine Tour! Find me & 100 other amazing zinesters at
