update Madison P&R name

--- a/_pages/events.html
+++ b/_pages/events.html
@@ -19,7 +19,7 @@ permalink: /events
     ☞ 4/8 ICE CREAM (Iowa City Expo for Comics and Real Eclectic
     Alternative Media), Iowa City, IA
   </li>
-  <li>☞ 4/22 Print & Resist Zine Fest, Madison, WI</li>
+  <li>☞ 4/22 Madison Print & Resist Zine Fest, Madison, WI</li>
   <li>☞ 5/20 CZF (Chicago Zine Fest), Chicago, IL</li>
   <li>☞ 6/3-6/4 CAKE (Chicago Alternative Comics Expo), Chicago, IL</li>
   <li>
