update Madison P&R name

--- a/_posts/2024-04-22-less-is-more-zine-tour-launch.html
+++ b/_posts/2024-04-22-less-is-more-zine-tour-launch.html
@@ -11,7 +11,7 @@ singles:
 <p> ☞ <br />
   Saturday kicks off my 2024 Less is More Zine Tour! Find me & 100 other amazing zinesters at
   <br />
-  <a href="https://madisonprintandresist.wordpress.com/" target="_blank">Print & Resist Zinefest</a> <br />
+  <a href="https://madisonprintandresist.wordpress.com/" target="_blank">Madison Print & Resist Zinefest</a> <br />
   4/27 <br />11-4 <br /> at Madison Public Library. <br />It's free! I'll be debuting 7 new prints from 
   Sound of Snow Falling & Time Capsule!!!<br />
   ☞ 
