--- a/_pages/events.html
+++ b/_pages/events.html
@@ -5,11 +5,12 @@ permalink: /events
 
 <h1>2024: The Less is More Zine Tour</h1>
 <ul>
-  <li>☞ 4/27 Madison Print & Resist Zine Fest, Madison, WI</li>
-  <li>☞ 6/14-7/7 Drawing Worlds: The art of comics and beyond, A2AC (The Ann Arbor Art Center), Ann Arbor, MI</li>
-  <li>☞ 6/15 ZND Fest (Zine Not Dead Fest: A Comics and Small Press Fair), Chicago, IL</li>
-  <li>☞ 8/18 INZF (Insert Name Zine Fest), Minneapolis, MN</li>
-  <li>☞ 9/26-9/29 CXC (Cartoon Crossroads Columbus), Columbus, OH</li>
+  <li>☞ 4/27 <a href="https://madisonprintandresist.wordpress.com/" target="_blank">Madison Print & Resist Zine Fest</a>, Madison, WI</li>
+  <li>☞ 6/14-7/7 Drawing Worlds: The art of comics and beyond, <a href="https://shop.a2ac.org/" target="_blank">A2AC (The Ann Arbor Art Center)</a>, Ann Arbor, MI</li>
+  <li>☞ 6/15 <a href="https://fest.zinenotdead.com/" target="_blank">ZND Fest (Zine Not Dead Fest: A Comics and Small Press Fair)</a>, Chicago, IL</li>
+  <li>☞ 8/17 <a href="https://autoptic.org/" target="_blank">Autoptic Festival</a>, Minneapolis, MN</li>
+  <li>☞ 8/18 <a href="https://www.ejoymehr.com/#inzf" target="_blank">INZF (Insert Name Zine Fest)</a>, Minneapolis, MN</li>
+  <li>☞ 9/26-9/29 <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a>, Columbus, OH</li>
 </ul>
 
 <hr />
@@ -49,5 +50,4 @@ permalink: /events
     ☞ 10/21 Chicago Printer Guilds PAPER JAM Publishers Fair,
     Co-prosperity, Chicago, IL
   </li>
-  <l>🖤</l>
 </ul>
