--- a/_pages/events.html
+++ b/_pages/events.html
@@ -8,6 +8,7 @@ permalink: /events
   <li>☞ 4/27 <a href="https://madisonprintandresist.wordpress.com/" target="_blank">Madison Print & Resist Zine Fest</a>, Madison, WI</li>
   <li>☞ 6/14-7/7 Drawing Worlds: The art of comics and beyond, <a href="https://shop.a2ac.org/" target="_blank">A2AC (The Ann Arbor Art Center)</a>, Ann Arbor, MI</li>
   <li>☞ 6/15 <a href="https://fest.zinenotdead.com/" target="_blank">ZND Fest (Zine Not Dead Fest: A Comics and Small Press Fair)</a>, Chicago, IL</li>
+  <li>☞ 6/30 <a href="https://www.emptybottle.com/" target="_blank">oddball market</a>, the Empty Bottle, Chicago, IL</li>
   <li>☞ 8/17 <a href="https://autoptic.org/" target="_blank">Autoptic Festival</a>, Minneapolis, MN</li>
   <li>☞ 8/18 <a href="https://www.ejoymehr.com/#inzf" target="_blank">INZF (Insert Name Zine Fest)</a>, Minneapolis, MN</li>
   <li>☞ 9/26-9/29 <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a>, Columbus, OH</li>
