--- a/_pages/prints.html
+++ b/_pages/prints.html
@@ -36,7 +36,6 @@ redirect_from: /pages/prints.html
                         name="on0"
                         value="Greeting Card &amp; Print Sizes:"
                       />
-                      Greeting Card &amp; Print Sizes:
                     </td>
                   </tr>
                   <tr>
@@ -101,7 +100,6 @@ redirect_from: /pages/prints.html
                       name="on0"
                       value="Greeting Card &amp; Print Sizes:"
                     />
-                    Greeting Card &amp; Print Sizes:
                   </td>
                 </tr>
                 <tr>
@@ -167,7 +165,6 @@ redirect_from: /pages/prints.html
                       name="on0"
                       value="Greeting Card &amp; Print Sizes:"
                     />
-                    Greeting Card &amp; Print Sizes:
                   </td>
                 </tr>
                 <tr>
@@ -234,7 +231,6 @@ redirect_from: /pages/prints.html
                       name="on0"
                       value="Greeting Card &amp; Print Sizes:"
                     />
-                    Greeting Card &amp; Print Sizes:
                   </td>
                 </tr>
                 <tr>
@@ -301,7 +297,6 @@ redirect_from: /pages/prints.html
                       name="on0"
                       value="Greeting Card &amp; Print Sizes:"
                     />
-                    Greeting Card &amp; Print Sizes:
                   </td>
                 </tr>
                 <tr>
@@ -364,7 +359,6 @@ redirect_from: /pages/prints.html
                       name="on0"
                       value="Greeting Card &amp; Print Sizes:"
                     />
-                    Greeting Card &amp; Print Sizes:
                   </td>
                 </tr>
                 <tr>
@@ -424,8 +418,7 @@ redirect_from: /pages/prints.html
           <table>
             <tr>
               <td>
-                <input type="hidden" name="on0" value="Print Sizes" />.............Print
-                Sizes..............
+                <input type="hidden" name="on0" value="Print Sizes" />
               </td>
             </tr>
             <tr>
@@ -486,8 +479,6 @@ redirect_from: /pages/prints.html
             <tr>
               <td>
                 <input type="hidden" name="on0" value="Print Sizes" />
-                .............Print
-                Sizes..............
               </td>
             </tr>
             <tr>
@@ -548,8 +539,7 @@ redirect_from: /pages/prints.html
                   type="hidden"
                   name="on0"
                   value="Print Sizes"
-                />.............Print
-                Sizes..............
+                />
               </td>
             </tr>
             <tr>
@@ -611,8 +601,6 @@ redirect_from: /pages/prints.html
                   name="on0"
                   value="Greeting Card &amp; Print Sizes:"
                 />
-                .............Print
-                Sizes..............
               </td>
             </tr>
             <tr>
@@ -678,8 +666,7 @@ redirect_from: /pages/prints.html
                   type="hidden"
                   name="on0"
                   value="Print Sizes"
-                />............Print
-                Sizes............
+                />
               </td>
             </tr>
             <tr>
@@ -746,8 +733,7 @@ redirect_from: /pages/prints.html
                   type="hidden"
                   name="on0"
                   value="Print Sizes"
-                />............Print
-                Sizes............
+                />
               </td>
             </tr>
             <tr>
@@ -812,8 +798,6 @@ redirect_from: /pages/prints.html
                   name="on0"
                   value="Greeting Card &amp; Print Sizes:"
                 />
-                Greeting Card &amp; Print
-                Sizes:
               </td>
             </tr>
             <tr>
@@ -876,8 +860,7 @@ redirect_from: /pages/prints.html
                   type="hidden"
                   name="on0"
                   value="Print Sizes"
-                />..............Print
-                Sizes..............
+                />
               </td>
             </tr>
             <tr>
@@ -941,8 +924,6 @@ redirect_from: /pages/prints.html
             <tr>
               <td>
                 <input type="hidden" name="on0" value="Print Sizes" />
-                .............Print
-                Sizes..............
               </td>
             </tr>
             <tr>
@@ -998,8 +979,6 @@ redirect_from: /pages/prints.html
             <tr>
               <td>
                 <input type="hidden" name="on0" value="Print Sizes" />
-                ..............Print
-                Sizes..............
               </td>
             </tr>
             <tr>
@@ -1054,7 +1033,6 @@ redirect_from: /pages/prints.html
             <tr>
               <td>
                 <input type="hidden" name="on0" value="Print Sizes" />
-                .............Print Sizes..............
               </td>
             </tr>
             <tr>
@@ -1109,7 +1087,6 @@ redirect_from: /pages/prints.html
             <tr>
               <td>
                 <input type="hidden" name="on0" value="Print Sizes" />
-                .............Print Sizes..............
               </td>
             </tr>
             <tr>
@@ -1167,7 +1144,7 @@ redirect_from: /pages/prints.html
                   type="hidden"
                   name="on0"
                   value="Print Sizes"
-                />.............Print Sizes..............
+                />
               </td>
             </tr>
             <tr>
@@ -1231,7 +1208,7 @@ redirect_from: /pages/prints.html
                   type="hidden"
                   name="on0"
                   value="Print Sizes"
-                />.............Print Sizes..............
+                />
               </td>
             </tr>
             <tr>
@@ -1292,7 +1269,6 @@ redirect_from: /pages/prints.html
             <tr>
               <td>
                 <input type="hidden" name="on0" value="Print Sizes" />
-                .............Print Sizes..............
               </td>
             </tr>
             <tr>
@@ -1350,7 +1326,6 @@ redirect_from: /pages/prints.html
             <tr>
               <td>
                 <input type="hidden" name="on0" value="Print Sizes" />
-                .............Print Sizes..............
               </td>
             </tr>
             <tr>
@@ -1408,7 +1383,6 @@ redirect_from: /pages/prints.html
             <tr>
               <td>
                 <input type="hidden" name="on0" value="Print Sizes" />
-                .............Print Sizes..............
               </td>
             </tr>
             <tr>
@@ -1466,7 +1440,6 @@ redirect_from: /pages/prints.html
             <tr>
               <td>
                 <input type="hidden" name="on0" value="Print Sizes" />
-                .............Print Sizes..............
               </td>
             </tr>
             <tr>
