--- a/_pages/prints.html
+++ b/_pages/prints.html
@@ -22,8 +22,10 @@ redirect_from: /pages/prints.html
 <article id="270-prints">
   <h1 class="h1-category-spacing">270°</h1>
   <div class="gallery">
-    {% for item in site.data.prints.prints270 %} {% include products-prints.html %} {%
-    endfor %}
+    {% assign random_270_prints = site.data.prints.prints270 | sample: 30 %}
+    {% for item in random_270_prints %}
+      {% include products-prints.html %}
+    {% endfor %}
   </div>
 </article>
 
@@ -31,8 +33,10 @@ redirect_from: /pages/prints.html
 <article id="cutw-prints">
   <h1 class="h1-category-spacing">Chrysanthemum Under the Waves</h1>
   <div class="gallery">
-    {% for item in site.data.prints.cutw %} {% include products-prints.html %} {%
-    endfor %}
+    {% assign random_cutw_prints = site.data.prints.cutw | sample: 6 %}
+    {% for item in random_cutw_prints %}
+      {% include products-prints.html %}
+    {% endfor %}
   </div>
 </article>
 
@@ -40,8 +44,10 @@ redirect_from: /pages/prints.html
 <article id="jonesy-prints">
   <h1 class="h1-category-spacing">Jonesy</h1>
   <div class="gallery">
-    {% for item in site.data.prints.jonesy %} {% include products-prints.html %} {%
-    endfor %}
+    {% assign random_jonesy_prints = site.data.prints.jonesy | sample: 2 %}
+    {% for item in random_jonesy_prints %}
+      {% include products-prints.html %}
+    {% endfor %}
   </div>
 </article>
 
@@ -49,8 +55,10 @@ redirect_from: /pages/prints.html
 <article id="nature-prints">
   <h1 class="h1-category-spacing">Nature</h1>
   <div class="gallery">
-    {% for item in site.data.prints.nature %} {% include products-prints.html %} {%
-    endfor %}
+    {% assign random_nature_prints = site.data.prints.nature | sample: 20 %}
+    {% for item in random_nature_prints %}
+      {% include products-prints.html %}
+    {% endfor %}
   </div>
 </article>
 
@@ -58,8 +66,10 @@ redirect_from: /pages/prints.html
 <article id="portrait-prints">
   <h1 class="h1-category-spacing">Portrait</h1>
   <div class="gallery">
-    {% for item in site.data.prints.portrait %} {% include products-prints.html %} {%
-    endfor %}
+    {% assign random_portrait_prints = site.data.prints.portrait | sample: 20 %}
+    {% for item in random_portrait_prints %}
+      {% include products-prints.html %}
+    {% endfor %}
   </div>
 </article>
 
@@ -67,8 +77,10 @@ redirect_from: /pages/prints.html
 <article id="sosf-prints">
   <h1 class="h1-category-spacing">Sound of Snow Falling</h1>
   <div class="gallery">
-    {% for item in site.data.prints.sosf %} {% include products-prints.html %} {%
-    endfor %}
+    {% assign random_sosf_prints = site.data.prints.sosf | sample: 20 %}
+    {% for item in random_sosf_prints %}
+      {% include products-prints.html %}
+    {% endfor %}
   </div>
 </article>
 
@@ -76,7 +88,9 @@ redirect_from: /pages/prints.html
 <article id="tc-prints">
   <h1 class="h1-category-spacing">Time Capsule</h1>
   <div class="gallery">
-    {% for item in site.data.prints.tc %} {% include products-prints.html %} {%
-    endfor %}
+    {% assign random_tc_prints = site.data.prints.tc | sample: 20 %}
+    {% for item in random_tc_prints %}
+      {% include products-prints.html %}
+    {% endfor %}
   </div>
 </article>
