change books to graphic novels in the listings

--- a/_pages/books.html
+++ b/_pages/books.html
@@ -5,11 +5,11 @@ redirect_from: /pages/books.html
 ---
 
 <p>Zines are printed on demand using an Epson inkjet printer and folded and stapled by hand. 
-  Books are printed offset and perfect bound by various printers overseas.  Anthologies 
+  Graphic novels are printed offset and perfect bound by various printers overseas.  Anthologies 
   are edited, printed and sold by their respective publishers.</p>
   <p>
     <a href="#zines">☞ Zines</a>
-    <a href="#books">☞ Books</a>
+    <a href="#graphicnovels">☞ Graphic Novels</a>
     <a href="#anthologies">☞ Anthologies</a>
   </p>
 <hr />
@@ -23,11 +23,11 @@ redirect_from: /pages/books.html
   </div>
 </article>
 
-<!-- books -->
-<article id="books">
-  <h1 class="h1-category-spacing">Books</h1>
+<!-- graphic novels -->
+<article id="graphicnovels">
+  <h1 class="h1-category-spacing">Graphic Novels</h1>
   <div class="gallery">
-    {% for item in site.data.products.books %} {% include products.html %} {%
+    {% for item in site.data.products.graphicnovels %} {% include products.html %} {%
     endfor %}
   </div>
 </article>
