edit paragraph text

--- a/_pages/books.html
+++ b/_pages/books.html
@@ -4,8 +4,8 @@ permalink: /books
 redirect_from: /pages/books.html
 ---
 
-<p>Zines are printed on demand using an Epson inkjet printer and folded and stapled by hand. 
-  Graphic novels are printed offset and perfect bound by various printers overseas.  Anthologies 
+<p>Each of my zines is printed on demand using my Epson inkjet printer and folded and stapled by hand. 
+  My graphic novels are printed offset and perfect bound by various printers overseas.  Anthologies 
   are edited, printed and sold by their respective publishers.</p>
   <p>
     <a href="#zines">☞ Zines</a>
