switch from tour diary to touring

--- a/_posts/2020-01-30-quimbys-fanta-signing.html
+++ b/_posts/2020-01-30-quimbys-fanta-signing.html
@@ -1,6 +1,6 @@
 ---
 title: "Quimby's Fanta Signing"
-categories: tour-diary anthologies
+categories: touring anthologies
 cover:
   path: /assets/images/blog/2020-01-30-quimbys-fanta-signing.jpg
   alt: "a hand with painted fingernails, a woman with her back turned, text reads: amy lockhart and maggie umber, quimby's bookstore"
