--- a/_posts/2021-12-26-sosf-in-power-lines-billy-ireland.html
+++ b/_posts/2021-12-26-sosf-in-power-lines-billy-ireland.html
@@ -1,6 +1,6 @@
 ---
 title: "SOSF in Power Lines/Billy Ireland"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/blog/2021-12-26-sosf-in-power-lines-billy-ireland-1.jpg
   alt: "Digital poster with a pink background and a yellow sunburst. In the center, a figure with a large head and a small body is holding a large, spiky, green fruit. The figure is surrounded by a variety of plants and animals."
