--- a/_posts/2023-04-06-jonesy-debuts-at-ice-cream.html
+++ b/_posts/2023-04-06-jonesy-debuts-at-ice-cream.html
@@ -1,6 +1,6 @@
 ---
 title: "Jonesy Debuts at ICE CREAM"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/books/maggie-umber-jonesy-cover.jpg
   alt: "a red figure smiling on a book cover, text reads: Jonesy, Maggie Umber"
