--- a/_posts/2023-04-21-pretzel-debut-print-and-resist.html
+++ b/_posts/2023-04-21-pretzel-debut-print-and-resist.html
@@ -1,6 +1,6 @@
 ---
 title: "PRETZEL Debut: Print & Resist"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/books/maggie-umber-pretzel-cover.jpg
   alt: "a white pretzel on a black zine cover, text reads: PRETZEL, Maggie Umber"
