--- a/_posts/2023-04-22-tour-stop-2-print-and-resist.html
+++ b/_posts/2023-04-22-tour-stop-2-print-and-resist.html
@@ -1,6 +1,6 @@
 ---
 title: "Tour Stop 2: Print & Resist"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/blog/2023-04-22-tour-stop-2-print-and-resist.jpg
   alt: "Maggie Umber and @brujaonpizza (Jenine) sharing a table at Madison Print and Resist Zine Fest"
