--- a/_posts/2023-06-01-tour-stop-4-cake-chicago.html
+++ b/_posts/2023-06-01-tour-stop-4-cake-chicago.html
@@ -1,6 +1,6 @@
 ---
 title: "Tour Stop 4: CAKE Chicago"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/blog/2023-06-01-tour-stop-4-cake-chicago-3.jpg
   alt: "zines by Maggie Umber - Bunworld, Jonesy, Pretzel and a crocheted Bun toy"
