--- a/_posts/2023-06-08-thank-you-cake-zine-community.html
+++ b/_posts/2023-06-08-thank-you-cake-zine-community.html
@@ -1,6 +1,6 @@
 ---
 title: "Thank you CAKE/Zine Community!"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/eric-bartholomew-maggie-umber-at-cake-2023.jpg
   alt: Maggie at her table cake with her zines and books. Magenta line drawings of Bunworld characters Bun and Piper surround her.
