--- a/_posts/2023-06-23-we-are-hungry-at-zine-pavilion.html
+++ b/_posts/2023-06-23-we-are-hungry-at-zine-pavilion.html
@@ -1,6 +1,6 @@
 ---
 title: WE ARE HUNGRY at Zine Pavilion
-categories: tour-diary
+categories: touring
 cover: 
   path: /assets/images/books/maggie-umber-we-are-hungry-cover.jpg
   alt: "spiders, text reads: WE ARE HUNGRY! MAGGIE UMBER"
