--- a/_posts/2023-08-09-tour-stop-6-inzf.html
+++ b/_posts/2023-08-09-tour-stop-6-inzf.html
@@ -1,6 +1,6 @@
 ---
 title: "Tour Stop 6: INZF"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/blog/2023-08-09-tour-stop-6-inzf-1.jpg
   alt: "hand reaching out for a yellow zine that reads: Jonesy"
