--- a/_posts/2023-08-24-tour-stop-7-zinemercado.html
+++ b/_posts/2023-08-24-tour-stop-7-zinemercado.html
@@ -1,6 +1,6 @@
 ---
 title: "Tour Stop 7: ZINEmercado"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/blog/2023-08-24-tour-stop-7-zinemercado-1.jpg
   alt: "ZINEmercado 2023 poster with a flying bird"
