--- a/_posts/2023-09-05-chrysanthemum-advanced-copies.html
+++ b/_posts/2023-09-05-chrysanthemum-advanced-copies.html
@@ -1,6 +1,6 @@
 ---
 title: "Chrysanthemum Advanced Copies"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/blog/2023-09-05-chrysanthemum-advanced-copies.jpg
   alt: "Chrysanthemum: the Storyboards zine pages printed out laying spread out on the floor, sun-dappled"
