--- a/_posts/2023-10-13-tour-stop-13-rain-taxis-tcbf.html
+++ b/_posts/2023-10-13-tour-stop-13-rain-taxis-tcbf.html
@@ -1,6 +1,6 @@
 ---
 title: "Tour Stop 13: Rain Taxi's TCBF"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/blog/2023-10-13-tour-stop-13-rain-taxis-tcbf.jpg
   alt: "books laying slanted on a wooden floor, with text that reads chrysanthemum: the Storyboards Maggie Umber, Maggie Umber Bunworld, PRETZEL Maggie Umber, Jonesy Maggie Umber, WE ARE HUNGRY MAGGIE UMBER"
