--- a/_posts/2023-10-17-cpg-publishers-fair-10-21.html
+++ b/_posts/2023-10-17-cpg-publishers-fair-10-21.html
@@ -1,6 +1,6 @@
 ---
 title: "CPG Publishers Fair 10/21"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/blog/2023-10-17-cpg-publishers-fair-10-21-1.jpg
   alt: "A print of a large, black silhouetted spider and a smaller one, shadowed, on a pale orange background with the words in black above WE ARE HUNGRY and below MAGGIE UMBER. The frame around this central image advertises the 2023 CPG Publishers Fair."
