--- a/_posts/2023-10-30-chrysanthemum-shop-debut.html
+++ b/_posts/2023-10-30-chrysanthemum-shop-debut.html
@@ -1,6 +1,6 @@
 ---
 title: "Chrysanthemum Shop Debut"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/books/maggie-umber-chrysanthemum-the-storyboards-cover.jpg
   alt: "chrysanthemum flowers, text reads: Chrysanthemum: the Storyboards, Maggie Umber"
