--- a/_posts/2024-04-22-less-is-more-zine-tour-launch.html
+++ b/_posts/2024-04-22-less-is-more-zine-tour-launch.html
@@ -1,6 +1,6 @@
 ---
 title: "Less is More Zine Tour Launch"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/blog/2024-04-22-less-is-more-zine-tour-launch-1.jpg
   alt: 7 prints from Sound of Snow Falling and Time Capsule featuring animals and plants
