--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -4,7 +4,7 @@ permalink: /blog
 ---
 
 <p>
-  My book announcements and tour diary entries! Plus...
+  My book announcements and tour entries! Plus...
   you'll find my reviews of graphic novels, comic books and zines with a focus on 
   small alternative press and self-published work. I only only review books that I love. 
 </p>
