--- a/_posts/2018-04-23-270-is-at-the-printer.html
+++ b/_posts/2018-04-23-270-is-at-the-printer.html
@@ -1,6 +1,6 @@
 ---
 title: "270° is at the Printer"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/blog/2018-04-23-270-is-at-the-printer.jpg
   alt: "northern saw-whet owl, text reads: maggie umber 270"
