--- a/_posts/2023-05-20-bunworld-1-debut-czf.html
+++ b/_posts/2023-05-20-bunworld-1-debut-czf.html
@@ -1,6 +1,6 @@
 ---
 title: "Bunworld 1 Debut: CZF"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/blog/2023-05-20-bunworld-1-debut-czf-1.jpg
   alt: printed pages of Bunworld waiting to be folded with a pair of blue gloves
