--- a/_posts/2023-09-13-chrysanthemum-debuts-at-cabf.html
+++ b/_posts/2023-09-13-chrysanthemum-debuts-at-cabf.html
@@ -1,6 +1,6 @@
 ---
 title: "Chrysanthemum Debuts at CABF"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/blog/2023-09-13-chrysanthemum-debuts-at-cabf.jpg
   alt: "Chrysanthemum: the Storyboards zine surrounded by prints from Chrysanthemum Under the Waves"
