--- a/_posts/2023-09-26-zine-not-dead-21.html
+++ b/_posts/2023-09-26-zine-not-dead-21.html
@@ -1,6 +1,6 @@
 ---
 title: "ZINE NOT DEAD #21"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/blog/2023-09-26-zine-not-dead-21-cover.jpg
   alt: "Digital poster with two moon-headed figures surrounding a snake, above an octopus wearing a duck on its head. It is floating in the ocean with a sun setting or rising behind it."
