--- a/_posts/2023-10-20-sosf-and-tc-prints-debut.html
+++ b/_posts/2023-10-20-sosf-and-tc-prints-debut.html
@@ -1,6 +1,6 @@
 ---
 title: "SOSF & TC Prints Debut"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/blog/2023-10-20-sosf-and-tc-prints-debut.jpg
   alt: great horned owl with moon cycle, great blue heron flying, monarch life cycle, snake and frogs, butterfly and beetle pollinating plants
