--- a/_posts/2024-03-13-cutw-available-for-preorder.html
+++ b/_posts/2024-03-13-cutw-available-for-preorder.html
@@ -1,6 +1,6 @@
 ---
 title: "CUTW Preorder Available"
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/blog/2024-03-13-cutw-available-for-preorder.jpg
   alt: "text reads: Chrysanthemum Under the Waves"
