--- a/_posts/2024-06-03-less-is-more-zine-tour-continues.html
+++ b/_posts/2024-06-03-less-is-more-zine-tour-continues.html
@@ -1,6 +1,6 @@
 ---
 title: Less is More Zine Tour Continues
-categories: tour-diary
+categories: touring
 cover:
   path: /assets/images/blog/2024-06-03-less-is-more-zine-tour-continues-1.jpg
   alt: "Digital poster with a pink background and a yellow sunburst. In the center, a figure with a large head and a small body is holding a large, spiky, green fruit. The figure is surrounded by a variety of plants and animals."
