add cxc special guest post

--- a/_posts/2024-06-03-less-is-more-zine-tour-continues.html
+++ b/_posts/2024-06-03-less-is-more-zine-tour-continues.html
@@ -3,12 +3,12 @@ title: Less is More Zine Tour Continues
 categories: touring
 cover:
   path: /assets/images/blog/2024-06-03-less-is-more-zine-tour-continues-1.jpg
-  alt: "Digital poster with a pink background and a yellow sunburst. In the center, a figure with a large head and a small body is holding a large, spiky, green fruit. The figure is surrounded by a variety of plants and animals."
+  alt: crocheted nunion toys standing on a copy of a zine, cover text reads Chrysanthemum the Storyboards, Maggie Umber
 doubles:
   - path: /assets/images/blog/2024-06-03-less-is-more-zine-tour-continues-2.jpg
-    alt: horse being ridden by a rib cage, as it itself trod upon train wheels
+    alt: 4 prints from Chrysanthemum Under the Waves and 4 crocheted nunion toys surrounding a copy of a zine, cover text reads Chrysanthemum the Storyboards, Maggie Umber
   - path: /assets/images/blog/2024-06-03-less-is-more-zine-tour-continues-3.jpg
-    alt: plush toast
+    alt: 4 crocheted nunion toys standing on a print
 ---
 
 <p>
@@ -30,4 +30,3 @@ doubles:
   <a href="https://www.instagram.com/oddballmarket/" target="_blank">oddball market</a>
   late into the night :D Come see!
 </p>
-
