add CAKE to events

--- a/_pages/events.html
+++ b/_pages/events.html
@@ -12,7 +12,8 @@ permalink: /events
   <li>☞ 6/30 <a href="https://www.emptybottle.com/" target="_blank">oddball market</a>, the Empty Bottle, Chicago, IL</li>
   <li>☞ 8/17 <a href="https://autoptic.org/" target="_blank">Autoptic Festival</a>, Minneapolis, MN</li>
   <li>☞ 8/18 <a href="https://www.ejoymehr.com/#inzf" target="_blank">INZF (Insert Name Zine Fest)</a>, Minneapolis, MN</li>
-  <li>☞ 9/26-9/29 <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a>, Columbus, OH</li>
+  <li>☞ 8/24-25 <a href="https://www.cakechicago.com/" target="_blank">CAKE (Chicago Alternative Comics Expo)</a>, Chicago, IL</li>
+  <li>☞ 9/26-29 <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a>, Columbus, OH</li>
 </ul>
 
 <h2>2023: My Mostly Midwest Zine Tour</h2>
