--- a/_posts/2024-06-03-less-is-more-zine-tour-continues.html
+++ b/_posts/2024-06-03-less-is-more-zine-tour-continues.html
@@ -3,12 +3,15 @@ title: Less is More Zine Tour Continues
 categories: touring
 cover:
   path: /assets/images/blog/2024-06-03-less-is-more-zine-tour-continues-1.jpg
-  alt: crocheted nunion toys standing on a copy of a zine, cover text reads Chrysanthemum the Storyboards, Maggie Umber
+  alt: crocheted bun alien and spiky nunion toys
 doubles:
   - path: /assets/images/blog/2024-06-03-less-is-more-zine-tour-continues-2.jpg
-    alt: 4 prints from Chrysanthemum Under the Waves and 4 crocheted nunion toys surrounding a copy of a zine, cover text reads Chrysanthemum the Storyboards, Maggie Umber
+    alt: crocheted nunion toys standing on a copy of a zine, cover text reads Chrysanthemum the Storyboards, Maggie Umber
   - path: /assets/images/blog/2024-06-03-less-is-more-zine-tour-continues-3.jpg
-    alt: 4 crocheted nunion toys standing on a print
+    alt: 4 prints from Chrysanthemum Under the Waves and 4 crocheted nunion toys surrounding a copy of a zine, cover text reads Chrysanthemum the Storyboards, Maggie Umber
+singles:
+  - path: /assets/images/blog/2024-06-03-less-is-more-zine-tour-continues-4.jpg
+    alt: a crocheted nunion toy standing on a print
 ---
 
 <p>
@@ -30,3 +33,4 @@ doubles:
   <a href="https://www.instagram.com/oddballmarket/" target="_blank">oddball market</a>
   late into the night :D Come see!
 </p>
+{% include blog-single.html %}
