--- a/_pages/events.html
+++ b/_pages/events.html
@@ -7,7 +7,7 @@ permalink: /events
 <h2>2024: The Less is More Zine Tour</h2>
 <ul>
   <li>☞ 4/27 <a href="https://madisonprintandresist.wordpress.com/" target="_blank">Madison Print & Resist Zine Fest</a>, Madison, WI</li>
-  <li>☞ 6/14-7/7 Drawing Worlds: The art of comics and beyond, <a href="https://shop.a2ac.org/" target="_blank">A2AC (The Ann Arbor Art Center)</a>, Ann Arbor, MI</li>
+  <li>☞ 6/14-7/7 Drawing Worlds: The art of comics and beyond, <a href="https://www.annarborartcenter.org/drawing-worlds/" target="_blank">A2AC (The Ann Arbor Art Center)</a>, Ann Arbor, MI</li>
   <li>☞ 6/15 <a href="https://fest.zinenotdead.com/" target="_blank">ZND Fest (Zine Not Dead Fest: A Comics and Small Press Fair)</a>, Chicago, IL</li>
   <li>☞ 6/30 <a href="https://www.emptybottle.com/" target="_blank">oddball market</a>, the Empty Bottle, Chicago, IL</li>
   <li>☞ 8/17 <a href="https://autoptic.org/" target="_blank">Autoptic Festival</a>, Minneapolis, MN</li>
