--- a/_pages/books/bunworld-2.html
+++ b/_pages/books/bunworld-2.html
@@ -16,7 +16,7 @@ trailer:
   credits: "Credits: Color Bunworld video and art by Maggie Umber"
 summaries:
   - 4 frends! lil Baker (a tiny baker), Piper (a pipe smoking snake), a hungry Bun, a snug <a href="http://watermelondriveway.com/store.html" target="_blank">Dog</a>! Together with their bad frends, they inhabit a comic world where they bake weird humor, speak bad spelling and dream yum treats.
-  - In issue 2, Squat explodes from a cake Momma Bear spent all night baking. In the ruckus, Squat's ears and the cake have gone missing. What are Momma Bear, lil Baker, Piper, t and <a href="http://watermelondriveway.com/store.html" target="_blank">Dog</a> to do? Throw Bun a Bday party of course!
+  - In issue 2, Squat explodes from a cake Momma Bear spent all night baking. In the ruckus, Squat's ears and the cake have gone missing. What are Momma Bear, lil Baker, Piper, t and <a href="http://watermelondriveway.com/store.html" target="_blank">Dog</a> to do? Throw a Bday party for Bun of course!
 blurbs:
   - null
 reviews:
