add author name

--- a/_posts/2018-04-23-270-is-at-the-printer.html
+++ b/_posts/2018-04-23-270-is-at-the-printer.html
@@ -1,5 +1,6 @@
 ---
 title: "270° is at the Printer"
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/blog/2018-04-23-270-is-at-the-printer.jpg
