--- a/_posts/2018-10-03-sosf-best-american-comics.html
+++ b/_posts/2018-10-03-sosf-best-american-comics.html
@@ -1,5 +1,6 @@
 ---
-title: "SOSF Best American Comics"
+title: SOSF Best American Comics
+author: Maggie Umber
 categories: anthologies
 cover:
   path: /assets/images/blog/2018-10-03-sosf-best-american-comics.jpg
