--- a/_posts/2019-02-02-comics-in-fanta-bomb-mag.html
+++ b/_posts/2019-02-02-comics-in-fanta-bomb-mag.html
@@ -1,5 +1,6 @@
 ---
-title: Comics in Fanta/BOMB Mag 
+title: "Comics in Fanta/BOMB Mag" 
+author: Maggie Umber
 categories: anthologies
 cover:
   path: /assets/images/blog/2019-02-02-comics-in-fanta-bomb-mag-1.jpg
