--- a/_posts/2019-02-06-comics-in-spiralbound-mag.html
+++ b/_posts/2019-02-06-comics-in-spiralbound-mag.html
@@ -1,5 +1,6 @@
 ---
 title: Comics in Spiralbound Mag
+author: Maggie Umber
 categories: anthologies
 cover:
   path: /assets/images/blog/2019-02-06-comics-in-spiralbound-mag.jpg
