--- a/_posts/2020-01-30-quimbys-fanta-signing.html
+++ b/_posts/2020-01-30-quimbys-fanta-signing.html
@@ -1,5 +1,6 @@
 ---
 title: "Quimby's Fanta Signing"
+author: Maggie Umber
 categories: touring anthologies
 cover:
   path: /assets/images/blog/2020-01-30-quimbys-fanta-signing.jpg
