--- a/_posts/2021-12-26-sosf-in-power-lines-billy-ireland.html
+++ b/_posts/2021-12-26-sosf-in-power-lines-billy-ireland.html
@@ -1,5 +1,6 @@
 ---
 title: "SOSF in Power Lines/Billy Ireland"
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/blog/2021-12-26-sosf-in-power-lines-billy-ireland-1.jpg
