--- a/_posts/2022-06-02-schizophrenic-dialogues-film.html
+++ b/_posts/2022-06-02-schizophrenic-dialogues-film.html
@@ -1,5 +1,6 @@
 ---
 title: Schizophrenic Dialogues Film
+author: Maggie Umber
 categories: videos
 cover:
   path: /assets/images/blog/2022-06-02-schizophrenic-dialogues-film-1.jpg
