--- a/_posts/2023-04-06-jonesy-debuts-at-ice-cream.html
+++ b/_posts/2023-04-06-jonesy-debuts-at-ice-cream.html
@@ -1,5 +1,6 @@
 ---
-title: "Jonesy Debuts at ICE CREAM"
+title: Jonesy Debuts at ICE CREAM
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/books/maggie-umber-jonesy-cover.jpg
