--- a/_posts/2023-04-21-pretzel-debut-print-and-resist.html
+++ b/_posts/2023-04-21-pretzel-debut-print-and-resist.html
@@ -1,5 +1,6 @@
 ---
 title: "PRETZEL Debut: Print & Resist"
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/books/maggie-umber-pretzel-cover.jpg
