--- a/_posts/2023-06-01-tour-stop-4-cake-chicago.html
+++ b/_posts/2023-06-01-tour-stop-4-cake-chicago.html
@@ -1,5 +1,6 @@
 ---
 title: "Tour Stop 4: CAKE Chicago"
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/blog/2023-06-01-tour-stop-4-cake-chicago-3.jpg
