--- a/_posts/2023-06-23-we-are-hungry-at-zine-pavilion.html
+++ b/_posts/2023-06-23-we-are-hungry-at-zine-pavilion.html
@@ -1,5 +1,6 @@
 ---
 title: WE ARE HUNGRY at Zine Pavilion
+author: Maggie Umber
 categories: touring
 cover: 
   path: /assets/images/books/maggie-umber-we-are-hungry-cover.jpg
