--- a/_posts/2023-09-05-chrysanthemum-advanced-copies.html
+++ b/_posts/2023-09-05-chrysanthemum-advanced-copies.html
@@ -1,5 +1,6 @@
 ---
-title: "Chrysanthemum Advanced Copies"
+title: Chrysanthemum Advanced Copies
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/blog/2023-09-05-chrysanthemum-advanced-copies.jpg
