--- a/_posts/2023-09-13-chrysanthemum-debuts-at-cabf.html
+++ b/_posts/2023-09-13-chrysanthemum-debuts-at-cabf.html
@@ -1,5 +1,6 @@
 ---
-title: "Chrysanthemum Debuts at CABF"
+title: Chrysanthemum Debuts at CABF
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/blog/2023-09-13-chrysanthemum-debuts-at-cabf.jpg
