--- a/_posts/2023-10-13-tour-stop-13-rain-taxis-tcbf.html
+++ b/_posts/2023-10-13-tour-stop-13-rain-taxis-tcbf.html
@@ -1,5 +1,6 @@
 ---
 title: "Tour Stop 13: Rain Taxi's TCBF"
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/blog/2023-10-13-tour-stop-13-rain-taxis-tcbf.jpg
