--- a/_posts/2023-10-20-sosf-and-tc-prints-debut.html
+++ b/_posts/2023-10-20-sosf-and-tc-prints-debut.html
@@ -1,5 +1,6 @@
 ---
-title: "SOSF & TC Prints Debut"
+title: SOSF &#x26; TC Prints Debut
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/blog/2023-10-20-sosf-and-tc-prints-debut.jpg
