--- a/_posts/2023-10-30-chrysanthemum-shop-debut.html
+++ b/_posts/2023-10-30-chrysanthemum-shop-debut.html
@@ -1,5 +1,6 @@
 ---
-title: "Chrysanthemum Shop Debut"
+title: Chrysanthemum Shop Debut
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/books/maggie-umber-chrysanthemum-the-storyboards-cover.jpg
@@ -20,7 +21,7 @@ singles:
   exceptional. Viewing this body of work inspires me to do better as an
   artist overall, and in the composing stages of laying out a book. I
   cannot wait to read the finished book! <br />
-  — Ash H.G., cartoonist behind The Golden Thread Zine & forthcoming
+  — Ash H.G., cartoonist behind The Golden Thread Zine and forthcoming
   graphic novel East District
 </p>
 
