--- a/_posts/2024-01-26-the-academic-hour.html
+++ b/_posts/2024-01-26-the-academic-hour.html
@@ -1,5 +1,6 @@
 ---
 title: The Academic Hour
+author: Maggie Umber
 categories: reviews
 cover:
   path: /assets/images/blog/2024-01-26-the-academic-hour-1.jpg
