--- a/_posts/2024-03-08-anya-chases-down-the-end.html
+++ b/_posts/2024-03-08-anya-chases-down-the-end.html
@@ -1,5 +1,6 @@
 ---
 title: Anya Chases Down the End
+author: Maggie Umber
 category: reviews
 cover:
   path: /assets/images/blog/2024-03-08-anya-chases-down-the-end-1.jpg
