--- a/_posts/2024-03-13-cutw-available-for-preorder.html
+++ b/_posts/2024-03-13-cutw-available-for-preorder.html
@@ -1,5 +1,6 @@
 ---
-title: "CUTW Preorder Available"
+title: CUTW Preorder Available
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/blog/2024-03-13-cutw-available-for-preorder.jpg
