--- a/_posts/2024-04-22-less-is-more-zine-tour-launch.html
+++ b/_posts/2024-04-22-less-is-more-zine-tour-launch.html
@@ -1,5 +1,6 @@
 ---
-title: "Less is More Zine Tour Launch"
+title: Less is More Zine Tour Launch
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/blog/2024-04-22-less-is-more-zine-tour-launch-1.jpg
