--- a/_posts/2024-06-03-less-is-more-zine-tour-continues.html
+++ b/_posts/2024-06-03-less-is-more-zine-tour-continues.html
@@ -1,5 +1,6 @@
 ---
 title: Less is More Zine Tour Continues
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/blog/2024-06-03-less-is-more-zine-tour-continues-1.jpg
