--- a/_posts/2024-06-06-cxc-special-guest.html
+++ b/_posts/2024-06-06-cxc-special-guest.html
@@ -1,5 +1,6 @@
 ---
 title: CXC Special Guest
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/blog/2024-06-06-cxc-special-guest.jpg
