--- a/_posts/2024-06-12-znd-fest-sat.html
+++ b/_posts/2024-06-12-znd-fest-sat.html
@@ -1,5 +1,6 @@
 ---
 title: ZND Fest Sat
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/blog/2024-06-12-znd-fest-sat-1.jpg
