--- a/_posts/2023-06-08-thank-you-cake-zine-community.html
+++ b/_posts/2023-06-08-thank-you-cake-zine-community.html
@@ -1,5 +1,6 @@
 ---
 title: "Thank you CAKE/Zine Community!"
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/eric-bartholomew-maggie-umber-at-cake-2023.jpg
