--- a/_posts/2023-08-09-tour-stop-6-inzf.html
+++ b/_posts/2023-08-09-tour-stop-6-inzf.html
@@ -1,5 +1,6 @@
 ---
 title: "Tour Stop 6: INZF"
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/blog/2023-08-09-tour-stop-6-inzf-1.jpg
