--- a/_posts/2023-08-24-tour-stop-7-zinemercado.html
+++ b/_posts/2023-08-24-tour-stop-7-zinemercado.html
@@ -1,5 +1,6 @@
 ---
 title: "Tour Stop 7: ZINEmercado"
+author: Maggie Umber
 categories: touring videos
 cover:
   path: /assets/images/blog/2023-08-24-tour-stop-7-zinemercado-1.jpg
