--- a/_posts/2023-09-26-zine-not-dead-21.html
+++ b/_posts/2023-09-26-zine-not-dead-21.html
@@ -1,5 +1,6 @@
 ---
 title: "ZINE NOT DEAD #21"
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/blog/2023-09-26-zine-not-dead-21-cover.jpg
