--- a/_posts/2023-10-10-paper-jam-znd-performance.html
+++ b/_posts/2023-10-10-paper-jam-znd-performance.html
@@ -1,5 +1,6 @@
 ---
 title: "PAPER JAM / ZND Performance"
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/blog/2023-10-10-paper-jam-znd-performance.jpg
