--- a/_posts/2023-10-17-cpg-publishers-fair-10-21.html
+++ b/_posts/2023-10-17-cpg-publishers-fair-10-21.html
@@ -1,5 +1,6 @@
 ---
 title: "CPG Publishers Fair 10/21"
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/blog/2023-10-17-cpg-publishers-fair-10-21-1.jpg
