--- a/_posts/2024-06-10-cutw-at-a2ac-drawing-worlds.html
+++ b/_posts/2024-06-10-cutw-at-a2ac-drawing-worlds.html
@@ -1,5 +1,6 @@
 ---
 title: CUTW at A2AC Drawing Worlds
+author: Maggie Umber
 categories: touring
 cover:
   path: /assets/images/blog/2024-06-10-cutw-at-a2ac-drawing-worlds.jpg
