--- a/_pages/about.html
+++ b/_pages/about.html
@@ -12,6 +12,8 @@ contacts:
     name: ☞ patreon
   - link: https://www.instagram.com/maggieumber/
     name: ☞ instagram
+  - link: https://maggieumber.com/feed.xml
+    name: ☞ RSS
 bio: "Maggie Umber paints, prints, and programs graphic novels and zines. She's published three graphic novels — Sound of Snow Falling, Time Capsule, and 270° — and her work has been widely anthologized."
 ---
 
