--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -8,6 +8,7 @@ permalink: /blog
   you'll find my reviews of graphic novels, comic books and zines with a focus on 
   small alternative press and self-published work. I only only review books that I love. 
 </p>
+<p>Subscribe: <a href="https://maggieumber.com/feed.xml">RSS</a></p>
 <p>
   Categories: {% for category in site.categories %}
   <a href="/{{ category[0] }}">{{ category[0] }}</a>{% unless forloop.last %},
