add mastodon link

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -10,10 +10,12 @@ contacts:
     name: ☞ email
   - link: https://www.patreon.com/maggieumber
     name: ☞ patreon
+  - link: https://mastodon.social/@maggieumber
+    name: ☞ mastodon
   - link: https://www.instagram.com/maggieumber/
-    name: ☞ instagram
+    name: ☞ ig
   - link: https://maggieumber.com/feed.xml
-    name: ☞ RSS
+    name: ☞ rss
 bio: "Maggie Umber paints, prints, and programs graphic novels and zines. She's published three graphic novels — Sound of Snow Falling, Time Capsule, and 270° — and her work has been widely anthologized."
 ---
 
