add rename new post

--- a/_posts/2024-06-27-10-new-prints-at-oddball-market.html
+++ b/_posts/2024-06-27-10-new-prints-at-oddball-market.html
@@ -1,12 +1,12 @@
 ---
-title: Oddball Markeet
+title: 10 New Prints at Oddball Market
 author: Maggie Umber
 categories: touring
 cover:
-  path: /assets/images/blog/2024-06-27-oddball-market-1.jpg
+  path: /assets/images/blog/2024-06-27-10-new-prints-at-oddball-market-1.jpg
   alt: watercolor and pen drawing prints on a print rack by Maggie Umber
 singles:
-  - path: /assets/images/blog/2024-06-27-oddball-market-2.jpg
+  - path: /assets/images/blog/2024-06-27-10-new-prints-at-oddball-market-2.jpg
     alt: oddball market flyer
 ---
 <p>This Sunday, 6/30, come find me at
